Exemplo de uso da câmera naiva do ionic

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,12 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Testando a câmera
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+  <ion-img class="imagem" [src]="imagemBase64"></ion-img>
+  <button class="btnIniCamera" ion-button block (click)="inicializaCamera()">Câmera</button>
 </ion-content>
